--- a/website/src/styles.css
+++ b/website/src/styles.css
@@ -41,10 +41,6 @@ body {
 
 a {
   color: var(--primary);
-  transition: font-weight 250ms;
-  &:hover {
-    font-weight: var(--weight-medium);
-  }
 }
 
 pre,
